--- a/openpot/templates/auth/login.html
+++ b/openpot/templates/auth/login.html
@@ -4,12 +4,9 @@
 <h1>{% block title %}Login{% endblock %}</h1>
 
 <form method="POST">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-
-    <label for="password">Password</label>
-    <input name="password" type="password" id="password" required>
-
+    {{ form.csrf_token }}
+    {{ form.identity.label }} {{ form.identity(size=20) }}
+    {{ form.password.label }} {{ form.password(size=20) }}
     <input type="submit" value="Login">
 </form>
 {% endblock %}
